fix: add horizontal overflow to code blocks

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -118,3 +118,7 @@ footer {
         text-decoration: underline;
     }
 }
+
+.highlight > pre {
+    overflow-x: auto;
+}
